Enhance project structure and improve analytics features
- Updated .gitignore to include environment and build files.
- Removed bun.lockb file.
- Added new dependencies for testing and state management in package.json.
- Refactored AnalyticsChart component to improve UI/UX, including a slider for chart data and better data handling.
- Introduced updatedAt field in Movie interface and adjusted related services for consistency.
- Enhanced Supabase client configuration to utilize environment variables for better security.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Testing
+coverage
+.nyc_output
+
+# Build
+build
+dist
+out
+
+# Cache
+.cache
+.temp
+.eslintcache
