--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,11 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
-      "use": "@vercel/node"
+      "src": "./api/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["./src/**"]
+      }
     }
   ],
   "routes": [
+    {
+      "handle": "filesystem"
+    },
     {
       "src": "/api/(.*)",
       "dest": "/api/index.js"
