--- a/backend/package.json
+++ b/backend/package.json
@@ -7,21 +7,23 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install",
+    "vercel-build": "echo hello"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.1",
-    "express-rate-limit": "^6.8.1",
     "compression": "^1.7.4",
-    "morgan": "^1.10.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": ["movies", "tracking", "api", "supabase"],
   "author": "",
