--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,27 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
   "builds": [
     {
       "src": "api/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 10
+      }
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
+      "handle": "filesystem"
+    },
+    {
+      "src": "/.*",
+      "dest": "api/index.js",
+      "headers": {
+        "Cache-Control": "s-maxage=0",
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+        "Access-Control-Allow-Headers": "*"
+      }
     }
   ]
 }
