--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,7 +5,7 @@
       "src": "api/index.js",
       "use": "@vercel/node",
       "config": {
-        "maxDuration": 10
+        "maxDuration": 30
       }
     }
   ],
@@ -23,5 +23,10 @@
         "Access-Control-Allow-Headers": "*"
       }
     }
-  ]
+  ],
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 30
+    }
+  }
 }
