chore: Add build script to package.json for consistency

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "echo \"No build step required\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
