--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,15 @@
 {
-  "functions": {
-    "api/index.js": {
-      "maxDuration": 30
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.js",
+      "use": "@vercel/node"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/index.js"
+    }
+  ]
 }
