chore: Update API base URL and refactor component imports; remove console error logs for silent handling

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,7 @@
 # Frontend Environment Variables
 
 # API Configuration
-VITE_API_BASE_URL=https://your-backend-vercel-app.vercel.app/api
+VITE_API_BASE_URL=https://bingebook-api.vercel.app/api
 
 # TMDB Configuration
 VITE_TMDB_API_KEY=your_tmdb_api_key_here
