Implement SeriesDetailDialog component with season and episode management
- Added SeriesDetailDialog component for displaying detailed information about a series, including seasons and episodes.
- Integrated fetching of series data, seasons, and episode statistics from the seriesService.
- Implemented functionality to toggle watched status for episodes and mark seasons as watched/unwatched.
- Enhanced UI with tabs for overview, seasons, and episodes, including progress indicators and status badges.
- Created service methods for managing series, seasons, and episodes in the seriesService.
- Added TMDB service for fetching external data related to TV shows and seasons.

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Backend API for BingeBook",
   "main": "src/index.js",
-  "type": "module",  "scripts": {
+  "type": "module",
+  "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "build": "if not exist dist mkdir dist && xcopy /E /I src dist\\src && copy package.json dist\\"
@@ -15,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "node-fetch": "^3.3.2",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
@@ -23,7 +25,12 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["movies", "tracking", "api", "supabase"],
+  "keywords": [
+    "movies",
+    "tracking",
+    "api",
+    "supabase"
+  ],
   "author": "",
   "license": "MIT"
 }
