Add supabase client secret to .gitignore and create repository overview documentation

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ out
 .temp
 .eslintcache
 AGENT.md
+supabase/GoogleClient/client_secret_580000220302-ol0utdt5ugat7crqg10oc68aem8pkjbj.apps.googleusercontent.com.json
